# mod_mosquitto

./: .drone.yml  .gitignore  LICENSE  Makefile.am  README.md  acinclude.m4  collect-test-logs.sh  configure.ac  mod_mosquitto.c  mod_mosquitto.h  mosquitto.conf.xml  mosquitto_cli.c  mosquitto_cli.h  mosquitto_config.c  mosquitto_config.h  mosquitto_events.c  mosquitto_events.h  mosquitto_mosq.c  mosquitto_mosq.h  mosquitto_utils.c  mosquitto_utils.h  run-tests-parallel.sh
autoload_conf/: mosquitto.conf.xml
autoload_configs/: mosquitto.conf.xml
test/: test_mod_mosquitto.c
test/conf/: freeswitch.xml
